fixed scrollbar

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,14 +15,6 @@ $body-background : #4B5056 ;
 html{
     scroll-behavior: smooth;
 }
-::-webkit-scrollbar{
-    width: 7px;
-}
-::-webkit-scrollbar-thumb{
-    background-color: #6D99CE;
-    border-radius: 5px;
-}
-
 body{
     font-family: myfont;
     margin: 0;
